--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,6 @@
             <artifactId>google-cloud-storage</artifactId>
         </dependency>
 
-        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -63,7 +62,7 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
- -->
+
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -92,6 +91,11 @@
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
             <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.0.Final</version>
         </dependency>
         <!--
         <dependency>
